<resources>
    <string name="app_name">ReogApp</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_upload">Upload</string>


    <!--  Custom UI Resources String  -->
    <string name="UI_hint_email">Masukkan Email Anda</string>
    <string name="UI_hint_name">Masukkan Nama Anda</string>
    <string name="UI_hint_password">Masukkan Kata Sandi Anda</string>
    <string name="UI_warning_empty_field">Kolom ini harus di isi</string>
    <string name="UI_warning_empty_name">Nama harus di isi</string>
    <string name="UI_warning_empty_email">Email harus di isi</string>
    <string name="UI_warning_invalid_email">Format Email tidak valid</string>
    <string name="UI_warning_empty_password">Kata Sandi harus di isi</string>
    <string name="UI_warning_invalid_password">Kata Sandi setidaknya memiliki 8 karakter</string>

    <!--  Fragment Splash String Resources  -->
    <string name="reog_image">Reog Image</string>

    <!--  Fragment Launcher String Resources  -->
    <string name="content_description_launcherscreen">Reog Logo Image</string>
    <string name="launcher_title_text">Selamat Datang di Aplikasi Reog</string>
    <string name="btn_text_launcher">Mulai Sekarang</string>
    <string name="launcher_desc_text">Resident Organizer (REOG), Resident Organizer is an English word for Penyelenggaran Penduduk, where this application is intended to assist the resident in the process of organizing activities in one resident area.</string>

    <!--  Fragment Layout Login String Resources  -->
    <string name="label_authentication_login">Masuk</string>
    <string name="label_authentication_login_button">Tekan tombol untuk Login</string>
    <string name="label_authentication_login_question">Belum punya akun?</string>
    <string name="label_authentication_register_with_underline"><u>Daftar</u></string>
    <string name="label_authentication_guest_button">Login Sebagai Tamu</string>
    <string name="label_authentication_guest_text">Atau</string>


    <!--  Fragment Layout Register String Resources  -->
    <string name="label_authentication_register">Daftar</string>
    <string name="label_authentication_name">Masukkan Nama Lengkap Anda</string>
    <string name="label_authentication_register_button">Tekan tombol untuk register</string>
    <string name="label_authentication_register_question">Sudah punya akun?</string>
    <string name="label_authentication_login_with_underline"><u>Masuk</u></string>

    <!--  Fragment Layout Login & Register String Resources  -->
    <string name="label_authentication_email">Masukkan Email Anda</string>
    <string name="label_authentication_password">Masukkan Password Anda</string>

    <!--  Home Fragment Resources String  -->
    <string name="label_greeting_user">Hi, %1$s!</string>

    <!--  Fragment Layout Home String Resources  -->
    <string name="label_home_bantuan">Daftar Program Bantuan Sosial Disini</string>
    <string name="label_home_bantuan_check">Daftar Bantuan Sosial</string>
    <string name="label_home_cd_logo_sensus">Logo Sensus</string>
    <string name="label_home_fitur">Fitur</string>
    <string name="label_home_bansos">Bansos</string>
    <string name="label_home_kip">KIP</string>
    <string name="label_home_kis">KIS</string>
    <string name="label_home_fitur_cd_bansos">Daftar Bansos</string>
    <string name="label_home_fitur_cd_kip">Daftar Kartu Indonesia Pintar</string>
    <string name="label_home_fitur_cd_kis">Daftar Kartu Indonesia Sehat</string>
    <string name="label_home_berita">Berita</string>

    <!--  Fragment Layout Profile String Resources  -->
    <string name="label_profile_iv">Photo Profil</string>
    <string name="label_profile_tv">Emma Myers</string>
    <string name="label_profile_age">21 Tahun</string>
    <string name="label_profile_location">Jakarta, Indonesia</string>
    <string name="label_profile_preferensi">Preferensi</string>
    <string name="label_profile_faq">Frequently Ask Questions</string>
    <string name="label_profile_setting">Settings</string>
    <string name="label_profile_about">About</string>
    <string name="label_profile_language">Language</string>
    <string name="label_profile_logout">Logout</string>

    <!--  Fragment Layout Item Berita String Resources  -->
    <string name="cd_image_preview_story">Berita Pilihan</string>
    <string name="tv_title_berita">Judul Berita</string>
    <string name="tv_description_berita">Deskripsi Berita</string>

    <!--  Fragment Layout Bansos String Resources -->
    <string name="tv_form_bansos">Form Pendaftaran Bansos</string>
    <string name="tv_form_bansos_kk">Nama Kepala Keluarga</string>
    <string name="et_form_bansos_kk">Masukkan Nama Kepala Keluarga</string>
    <string name="tv_form_bansos_nik">NIK</string>
    <string name="et_form_bansos_nik">Masukkan Nomor NIK</string>
    <string name="tv_form_bansos_ttl">Tanggal Lahir</string>
    <string name="et_form_bansos_ttl">Masukkan Tanggal Lahir</string>
    <string name="tv_form_bansos_alamat">Alamat</string>
    <string name="et_form_bansos_alamat">Masukkan Alamat Anda</string>
    <string name="tv_form_bansos_umur">Umur</string>
    <string name="et_form_bansos_umur">Masukkan Umur Anda</string>
    <string name="tv_form_bansos_range">Range Pendapatan</string>
    <string name="et_form_bansos_range">Masukkan Range Pendapatan</string>
    <string name="range_pertama">Rp 1.000.000 - Rp 2.000.000</string>
    <string name="range_kedua">Rp 2.000.000 - Rp 3.000.000</string>
    <string name="range_ketiga">Rp 4.000.000 - Rp 5.000.000</string>
    <string name="range_keempat">Rp 6.000.000 - Keatas</string>
    <string name="tv_form_bansos_ktp">Upload KTP</string>
    <string name="iv_form_bansos_ktp">Upload Gambar KTP Anda</string>
    <string name="tv_form_bansos_delete">Delete</string>
    <string name="iv_form_bansos_kk">Upload KK</string>
    <string name="tv_form_bansos_kk_iv">Upload Gambar KK Anda</string>
    <string name="tv_form_bansos_sktm">Upload Surat Keterangan Tidak Mampu</string>
    <string name="iv_form_bansos_sktm">Upload Gambar Surat Keterangan Tidak Mampu Anda</string>
    <string name="tv_form_bansos_domisili">Upload Surat Keterangan Domisili</string>
    <string name="iv_form_bansos_domisili">Upload Gambar Surat Keterangan Domisili Anda</string>
    <string name="tv_form_bansos_depan_rumah">Foto Depan Rumah</string>
    <string name="iv_form_bansos_depan_rumah">Upload Foto Depan Rumah</string>
    <string name="tv_form_bansos_dalam_rumah">Foto Dalam Rumah</string>
    <string name="iv_form_bansos_dalam_rumah">Upload Foto Dalam Rumah</string>
    <string name="tv_form_bansos_simpan">Simpan</string>

    <!--  Success Layout String Resources  -->
    <string name="iv_desc_success">Logo berhasil</string>
    <string name="iv_desc_waiting">Logo menunggu</string>
    <string name="tv_success">Berhasil!!!</string>
    <string name="tv_waiting">Mohon Tunggu!!!</string>
    <string name="tv_desc_success">Kamu berhasil mendaftar Program Bansos</string>
    <string name="tv_desc_waiting">Pendaftaran anda sedang diproses mohon tunggu …</string>
    <string name="tv_button_done">Kembali</string>

    <!--  Setting Fragment Layout String Resources  -->
    <string name="dark_mode">Dark Mode</string>
    <string name="display">Display Mode</string>

</resources>