<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.launcher.LauncherActivity">

    <ImageView
        android:id="@+id/iv_launcher_reog"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description_launcherscreen"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_reog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_launcher_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="64sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/iv_launcher_reog"
        app:layout_constraintStart_toStartOf="@+id/iv_launcher_reog"
        app:layout_constraintTop_toBottomOf="@+id/iv_launcher_reog" />

    <TextView
        android:id="@+id/tv_title_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/launcher_title_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_launcher_title" />

    <TextView
        android:id="@+id/tv_desc_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/launcher_desc_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_launcher" />

    <Button
        android:id="@+id/btn_launcher"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/bg_custom_button"
        android:backgroundTint="#0077C2"
        android:text="@string/btn_text_launcher"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableEnd="@drawable/ic_arrow_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>