<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:id="@+id/view_profile"
        android:layout_width="352dp"
        android:layout_height="152dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_background_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photo_profile"
        android:layout_width="88dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/label_profile_iv"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/view_profile"
        app:layout_constraintTop_toTopOf="@+id/view_profile"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_profile_tv"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
        app:layout_constraintTop_toTopOf="@+id/view_profile" />

    <TextView
        android:id="@+id/tv_name_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_profile_age"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_profile" />

    <TextView
        android:id="@+id/tv_name_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_profile_location"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_photo_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_years" />

    <TextView
        android:id="@+id/tv_name_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_profile_preferensi"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile" />

    <View
        android:id="@+id/group_4"
        android:layout_width="352dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_background_profile_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_email" />

    <Button
        android:id="@+id/faq_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_faq"
        android:text="@string/label_profile_faq"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/group_4"
        app:layout_constraintTop_toTopOf="@+id/group_4"
        tools:ignore="RtlHardcoded" />

    <View
        android:id="@+id/group_divider"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@drawable/custom_line"
        app:layout_constraintBottom_toTopOf="@+id/group_divider2"
        app:layout_constraintEnd_toEndOf="@+id/faq_button"
        app:layout_constraintStart_toStartOf="@+id/faq_button"
        app:layout_constraintTop_toTopOf="@+id/group_4" />

    <View
        android:id="@+id/group_divider2"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@drawable/custom_line"
        app:layout_constraintBottom_toBottomOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button"
        app:layout_constraintTop_toBottomOf="@+id/faq_button" />

    <View
        android:id="@+id/group_divider3"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@drawable/custom_line"
        app:layout_constraintBottom_toBottomOf="@+id/group_4"
        app:layout_constraintEnd_toEndOf="@+id/about_button"
        app:layout_constraintStart_toStartOf="@+id/about_button"
        app:layout_constraintTop_toTopOf="@+id/about_button" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/label_profile_setting"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="@+id/group_4"
        app:layout_constraintStart_toStartOf="@+id/group_4"
        app:layout_constraintTop_toBottomOf="@+id/faq_button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_about"
        android:text="@string/label_profile_about"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/group_4"
        app:layout_constraintStart_toStartOf="@+id/group_4"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/about_language"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_language"
        android:text="@string/label_profile_language"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/group_4"
        app:layout_constraintStart_toStartOf="@+id/group_4"
        app:layout_constraintTop_toBottomOf="@+id/about_button"
        tools:ignore="RtlHardcoded" />

    <com.reihan.reogapp.customui.CustomButton
        android:id="@+id/logout_button"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/ic_logout"
        android:text="@string/label_profile_logout"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_4" />

</androidx.constraintlayout.widget.ConstraintLayout>