<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/layout_second"
            android:layout_width="387dp"
            android:layout_height="290dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_rounded_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bantuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/label_home_bantuan"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_sensus" />

        <Button
            android:id="@+id/btn_cek_bantuan"
            android:layout_width="323dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_check_circle"
            android:text="@string/label_home_bantuan_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bantuan"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/iv_logo_sensus"
            android:layout_width="368dp"
            android:layout_height="179dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/label_home_cd_logo_sensus"
            android:src="@drawable/logo_sensus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_home_berita"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_second" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_berita"
            android:layout_width="370dp"
            android:layout_height="765dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHeight_min="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_berita"
            app:layout_constraintVertical_chainStyle="packed"
            tools:listitem="@layout/item_berita" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>